--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
      SPDX-FileCopyrightText: 2025 kenway214
      SPDX-License-Identifier: Apache-2.0
@@ -32,4 +31,12 @@
     <string name="game_bar_tile_description">Toggle the game overlay</string>
     <string name="game_bar_user_guide">User Guide</string>
     <string name="game_bar_user_guide_url">https://github.com/kenway214/packages_apps_GameBar/blob/main/GAMEBAR_USER_GUIDE.md</string>
+
+    <!-- ColorPicker -->
+    <string name="gamebar_default_title">Select a Color</string>
+    <string name="gamebar_presets">Presets</string>
+    <string name="gamebar_custom">Custom</string>
+    <string name="gamebar_select">Select</string>
+    <string name="gamebar_transparency">Transparency</string>
+
 </resources>
